--- a/docker-file/Dockerfile
+++ b/docker-file/Dockerfile
@@ -1,2 +1,2 @@
 FROM jboss/wildfly
-ADD ../target/12cdio3.war /opt/jboss/wildfly/standalone/deployments/
+ADD 12cdio3.war /opt/jboss/wildfly/standalone/deployments/
